# pz2026

./: CONTRIBUTING.md  LICENSE  LICENSE-docs.md  README.md  dziennik_praktyk.md  nazwa1  plik1
docs/: TODO.md  bash.md  faq.md  git.md  markdown.md  ssh.md  vscode.md
journal/: 2026-02-16.md  2026-02-17.md  2026-02-18.md  2026-02-19.md  2026-02-20.md  2026-02-23.md  2026-02-24.md  2026-02-25.md  2026-02-26.md  2026-02-27.md  2026-03-02.md  2026-03-03.md  2026-03-04.md  2026-03-05.md  2026-03-06.md  2026-03-09.md  2026-03-10.md  2026-03-11.md  _template.md
labs/00-bash-analysis/: README.md
labs/00-reading/: jakub.md  natalia.md
labs/01-audit/: audit_jakub.sh  audit_natalia.sh
labs/01-shell/: README.md
labs/02-program-todo-cli/jakub/todo-cli/: .editorconfig  .pre-commit-config.yaml  pyproject.toml
labs/02-program-todo-cli/jakub/todo-cli/docs/: diagram_class.md  diagrams_components.md
labs/02-program-todo-cli/jakub/todo-cli/src/todo_cli/: .todo.json  app.py  domain.py  main.py
labs/02-program-todo-cli/jakub/todo-cli/src/todo_cli/adapters/: argparse_adapter.py  cloud_todo_repository_adapter.py  (+3 more)
labs/02-program-todo-cli/jakub/todo-cli/test/: test_core.py
labs/02-program-todo-cli/natalia/todo-cli/: pyproject.toml
labs/02-program-todo-cli/natalia/todo-cli/docs/: diagram_class.md  diagrams_components.md  functionality.md  notes.md
labs/02-program-todo-cli/natalia/todo-cli/src/todo_cli/: app.py  domain.py  main.py  ports.py
labs/02-program-todo-cli/natalia/todo-cli/src/todo_cli/adapters/: argparse_adapter.py  json_todo_repository_adapter.py
